[package]
publish = false
name = "cowen-common"
version = "0.5.1"
edition = "2021"

[package.metadata.cargo-machete]
ignored = ["prost"]

[features]
reqwest = ["dep:reqwest"]
sqlx = ["dep:sqlx"]
redis = ["dep:redis"]
sqlite = ["sqlx", "sqlx/sqlite"]
postgres = ["sqlx", "sqlx/postgres"]
mysql = ["sqlx", "sqlx/mysql"]
mssql = []

[dependencies]
aes-gcm = "0.10"
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde", "clock"] }
cowen-infra = { path = "../../core/cowen-infra" }
cowen-sys = { path = "../../core/cowen-sys" }
inventory = "0.3"
ipnet = "2.12"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
prost = "0.13"
rand = "0.8"
redis = { version = "0.27", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
sqlx = { version = "0.8", optional = true, features = ["runtime-tokio", "tls-rustls"] }
sysinfo = "0.38"
thiserror = "2.0"
tokio = { version = "1.0", features = ["sync"] }
tonic = "0.12"
tracing = "0.1"
url = "2.5"

[build-dependencies]
chrono = "0.4"
protoc-bin-vendored = "3.2.0"
tonic-build = "0.12"
