[package]
publish = false
name = "cowen-gateway"
version = "0.5.0"
edition = "2021"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.7", features = ["macros"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
cowen-auth = { path = "../../services/cowen-auth" }
cowen-common = { path = "../cowen-common", features = ["reqwest"] }
cowen-infra = { path = "../cowen-infra" }
cowen-sys = { path = "../cowen-sys" }
hex = "0.4.3"
moka = { version = "0.12", features = ["sync"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
ring = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
urlencoding = "2.1"
uuid = { version = "1.12", features = ["v4"] }

[dev-dependencies]
cucumber = "0.23.0"

[[test]]
name = "bdd_runner"
harness = false
