[package]
publish = false
name = "cowen-infra"
version = "0.5.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
directories = "6.0"
hex = "0.4"
hostname = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "socks"] }
ring = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sysinfo = "0.38"
tokio = { version = "1.50", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3.27.0"
