[package]
name = "cowen-sys"
version = "0.4.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
cowen-infra = { path = "../../core/cowen-infra" }
cowen-plugin = { path = "../../core/cowen-plugin" }
directories = "6.0"
# hostname = "0.4"
libc = "0.2"
serde_json = "1.0"
sha2 = "0.10"
sysinfo = "0.38"
tokio = { version = "1.50", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.10", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
winreg = "0.52"

[dev-dependencies]
tempfile = "3.27.0"
