[package]
name = "cowen-mcp-plugin"
version = "0.4.0"
edition = "2021"

[dependencies]
tokio = { version = "1.50", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
clap = { version = "4.6", features = ["derive", "env"] }
regex = "1.11"
urlencoding = "2.1.3"
reqwest = { version = "0.12", features = ["json"] }
tonic = "0.12"
prost = "0.13"

[[bin]]
name = "cowen-mcp-plugin"
path = "src/main.rs"

[build-dependencies]
tonic-build = "0.12"
