[package]
name = "cowen-mcp-plugin"
version = "0.4.0"
edition = "2021"

[package.metadata.cargo-machete]
ignored = ["prost"]

[[bin]]
name = "cowen-mcp-plugin"
path = "src/main.rs"

[dependencies]
# anyhow = "1.0"
# tracing = "0.1"
clap = { version = "4.6", features = ["derive", "env"] }
prost = "0.13"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.50", features = ["full"] }
# reqwest = { version = "0.12", features = ["json"] }
tonic = "0.12"
urlencoding = "2.1.3"

[build-dependencies]
tonic-build = "0.12"
