[package]
name = "cowen-search-embedding"
version = "0.4.0"
edition = "2024"

[[bin]]
name = "libcowen_search_embedding"
path = "src/main.rs"

[dependencies]
cowen-common = { path = "../../core/cowen-common" }
cowen-ai = { path = "../../services/cowen-ai" }
cowen-search = { path = "../../services/cowen-search" }
cowen-plugin = { path = "../../core/cowen-plugin" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.50", features = ["full"] }

[dev-dependencies]
tempfile = "3.10"


