[package]
publish = false
name = "cowen-search-embedding"
version = "0.5.1"
edition = "2024"

[[bin]]
name = "libcowen_search_embedding"
path = "src/main.rs"

[dependencies]
cowen-ai = { path = "crates/cowen-ai" }
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.50", features = ["full"] }

[dev-dependencies]
tempfile = "3.10"


