[package]
publish = false
name = "cowen-wasm-auth-storeapp"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-machete]
ignored = ["extism-pdk", "serde", "serde_json"]

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
