[package]
name = "cowen-auth"
version = "0.4.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_urlencoded = "0.7"
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde", "clock"] }
tracing = "0.1"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "socks"] }
url = "2.5"
urlencoding = "2.1"
base64 = "0.22"
open = "5.0"
rand = "0.8"
uuid = { version = "1.12", features = ["v4"] }
sha2 = "0.10"
fs2 = "0.4"
sysinfo = "0.38"
axum = "0.7"

cowen-common = { path = "../../core/cowen-common", features = ["reqwest"] }
cowen-infra = { path = "../../core/cowen-infra" }
cowen-sys = { path = "../../core/cowen-sys" }
cowen-config = { path = "../../services/cowen-config" }
cowen-doctor = { path = "../../services/cowen-doctor" }
inventory = "0.3"
hex = "0.4"
indicatif = "0.18.4"
[features]
inte = []

[dev-dependencies]
tempfile = "3.8"
tokio = { version = "1.0", features = ["full"] }
cowen-store = { path = "../../services/cowen-store" }
