[package]
name = "cowen-auth"
version = "0.4.0"
edition = "2021"
[features]
inte = []

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.7"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde", "clock"] }

cowen-common = { path = "../../core/cowen-common", features = ["reqwest"] }
cowen-config = { path = "../../services/cowen-config" }
cowen-doctor = { path = "../../services/cowen-doctor" }
cowen-infra = { path = "../../core/cowen-infra" }
cowen-sys = { path = "../../core/cowen-sys" }
fs2 = "0.4"
hex = "0.4"
indicatif = "0.18.4"
inventory = "0.3"
open = "5.0"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
serde_yaml = "0.9"
sha2 = "0.10"
sysinfo = "0.38"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
urlencoding = "2.1"
uuid = { version = "1.12", features = ["v4"] }

[dev-dependencies]
cowen-store = { path = "../../services/cowen-store" }
tempfile = "3.8"
tokio = { version = "1.0", features = ["full"] }
