[package]
publish = false
name = "cowen-config"
version = "0.4.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.89"
cowen-common = { path = "../../core/cowen-common" }
cowen-infra = { path = "../../core/cowen-infra" }
notify = "6.1"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["sync", "rt", "net", "time"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3.3"
tokio = { version = "1.0", features = ["full"] }
